@@ -1,3 +1,8 @@
+1999-06-07  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>
+
+	* e2fs_stage1_5/Makefile.am (IMPORTANT_SIZE_LIMIT): Set to 31744.
+	* fat_stage1_5/Makefile.am (IMPORTANT_SIZE_LIMIT): Likewise.
+	
 1999-06-06  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>
 
 	The debug version of Stage 2 is removed.
@@ -119,7 +124,7 @@
 	
 1999-05-17  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>
 
-	* acinclude.m4 (grub_ASM_EXT_C): Do not overrun the comman
+	* acinclude.m4 (grub_ASM_EXT_C): Do not overrun the command
 	shift. Reported by Pavel Roskin <pabel_roskin@geocities.com>.
 
 1999-05-14  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>
